--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <footer class="footer">
             <p class="footer__title">Lissiyas Antony</p>
             <div class="footer__social">
-                <a href="www.linkedin.com/in/lissiyas-antony-b34753186" class="footer__icon"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="https://www.linkedin.com/in/lissiyas-antony-b34753186/" class="footer__icon"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
